{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "119e335e-63ed-4d50-9b13-0d1b13329ef8",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6041b18c-7e9c-40e1-af03-52ac63dbc66d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Escaping",
                    "type": "Button",
                    "id": "07dafce2-2f26-483d-a5b6-ce1c019e17d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f5e8956e-a834-4b51-b4c6-acf7e20eabc0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3bdad9f9-a560-434c-82cf-2635038bfe3e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "731082b1-ddaa-472a-8d76-f1b2f1ea09e1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4952aacc-e9ef-44e6-aabf-26502796388e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "15e5c8b2-bf2a-423b-aed2-80c80b1bf511",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0226faea-3f55-43b6-98fc-a75491042fb2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escaping",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI Control",
            "id": "f1c8f31d-3230-4324-80cd-e5850b6d7eed",
            "actions": [
                {
                    "name": "InteractionShortcut",
                    "type": "Button",
                    "id": "cb351774-1a46-4479-b7d4-68cb823b8b37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28a59235-1045-4a54-acf3-e610080c8199",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionShortcut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}